--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
    
-    <title>Mario Jump Like Dinossaur</title>
+    <title>Mario Jump Like a crazy Dinossaur</title>
 </head>
 <body>
     
